bin_PROGRAMS = npt
source = \
	test/test_alloc.c \
	test/test_arch.c \
	test/test_array.c \
	src/array_adjust.c \
	src/array_coerce.c \
	src/array_common.c \
	src/array_copy.c \
	test/test_array_object.c \
	src/array_vector.c \
	test/test_bigcons.c \
	test/test_bigdata.c \
	test/test_bignum.c \
	test/test_bit.c \
	src/boole.c \
	src/build.c \
	src/bytespec.c \
	test/test_c99.c \
	test/test_character.c \
	test/test_charqueue.c \
	test/test_clos_cache.c \
	test/test_clos_class.c \
	test/test_clos_combination.c \
	src/clos_common.c \
	test/test_clos_generic.c \
	test/test_clos_method.c \
	test/test_clos_type.c \
	test/test_clos.c \
	src/cmpl.c \
	src/cmpl_arch.c \
	src/cmpl_math.c \
	src/cmpl_multi.c \
	src/cmpl_plus.c \
	test/test_code.c \
	src/common_arrays.c \
	src/common_characters.c \
	src/common_conditions.c \
	src/common_conses.c \
	src/common_data.c \
	src/common_environment.c \
	src/common_eval.c \
	src/common_filenames.c \
	src/common_files.c \
	src/common_hashtables.c \
	src/common_header.c \
	src/common_iteration.c \
	src/common_numbers.c \
	src/common_objects.c \
	src/common_packages.c \
	src/common_printer.c \
	src/common_reader.c \
	src/common_sequences.c \
	src/common_streams.c \
	src/common_strings.c \
	src/common_structures.c \
	src/common_symbols.c \
	src/common_system.c \
	src/common_types.c \
	src/common.c \
	test/test_condition.c \
	test/test_cons.c \
	src/constant.c \
	test/test_control.c \
	src/copy.c \
	src/core.c \
	src/degrade.c \
	src/develop.c \
	src/document.c \
	test/test_encode.c \
	src/environment.c \
	test/test_equal.c \
	test/test_eval_code.c \
	test/test_eval_declare.c \
	src/eval_main.c \
	test/test_eval_optparse.c \
	test/test_eval_parse.c \
	test/test_eval_scope.c \
	test/test_eval_stack.c \
	test/test_eval_table.c \
	test/test_eval.c \
	test/test_execute.c \
	src/extern_argv.c \
	src/extern_init.c \
	src/extern_object.c \
	src/extern_string.c \
	test/test_fasl.c \
	test/test_file_memory.c \
	test/test_file.c \
	src/files.c \
	test/test_fmtfloat.c \
	test/test_format.c \
	test/test_function.c \
	test/test_gc.c \
	test/test_hashtable.c \
	test/test_heap.c \
	src/info.c \
	test/test_integer.c \
	src/intern.c \
	test/test_lambda.c \
	test/test_local.c \
	test/test_main.c \
	src/math_exp.c \
	src/math_power.c \
	src/math_type.c \
	src/md5encode.c \
	test/test_memory.c \
	src/mop.c \
	src/mop_class.c \
	src/mop_generic.c \
	src/mop_reader.c \
	src/mop_protocols.c \
	test/test_number.c \
	src/number_gcd.c \
	src/number_random.c \
	test/test_object.c \
	test/test_package.c \
	test/test_pathname.c \
	src/pointer.c \
	test/test_print.c \
	src/prompt.c \
	test/test_quote.c \
	test/test_radix.c \
	src/random.c \
	src/random_float.c \
	src/random_state.c \
	test/test_ratio.c \
	src/rational.c \
	src/readlite.c \
	test/test_readtable.c \
	src/real_ceiling.c \
	src/real_common.c \
	src/real_decode.c \
	src/real_division.c \
	src/real_float.c \
	src/real_floor.c \
	src/real_round.c \
	src/real_truncate.c \
	src/real.c \
	src/rt.c \
	src/rt_load.c \
	test/test_sequence.c \
	src/setf.c \
	test/test_sort.c \
	src/stream_broadcast.c \
	src/stream_concat.c \
	src/stream_echo.c \
	src/stream_error.c \
	src/stream_file.c \
	src/stream_prompt.c \
	src/stream_string.c \
	src/stream_synonym.c \
	src/stream_twoway.c \
	test/test_stream.c \
	test/test_strtype.c \
	src/structure.c \
	test/test_sxhash.c \
	test/test_symbol.c \
	src/syscall.c \
	src/thread.c \
	test/test_token.c \
	src/type_coerce.c \
	src/type_constant.c \
	test/test_type_copy.c \
	src/type_deftype.c \
	test/test_type_name.c \
	test/test_type_number.c \
	test/test_type_object.c \
	test/test_type_optimize.c \
	test/test_type_parse.c \
	test/test_type_range.c \
	test/test_type_subtypep.c \
	test/test_type_symbol.c \
	test/test_type_table.c \
	test/test_type_typep.c \
	test/test_type_upgraded.c \
	test/test_type_value.c \
	test/test_type.c \
	test/test_unicode.c \
	src/user.c \
	src/variable.c

release_source = \
	src/alloc.c \
	src/arch.c \
	src/array.c \
	src/array_adjust.c \
	src/array_coerce.c \
	src/array_common.c \
	src/array_copy.c \
	src/array_object.c \
	src/array_vector.c \
	src/bigcons.c \
	src/bigdata.c \
	src/bignum.c \
	src/bit.c \
	src/boole.c \
	src/build.c \
	src/bytespec.c \
	src/c99.c \
	src/character.c \
	src/charqueue.c \
	src/clos_cache.c \
	src/clos_class.c \
	src/clos_combination.c \
	src/clos_common.c \
	src/clos_generic.c \
	src/clos_method.c \
	src/clos_type.c \
	src/clos.c \
	src/cmpl.c \
	src/cmpl_arch.c \
	src/cmpl_math.c \
	src/cmpl_multi.c \
	src/cmpl_plus.c \
	src/code.c \
	src/common_arrays.c \
	src/common_characters.c \
	src/common_conditions.c \
	src/common_conses.c \
	src/common_data.c \
	src/common_environment.c \
	src/common_eval.c \
	src/common_filenames.c \
	src/common_files.c \
	src/common_hashtables.c \
	src/common_header.c \
	src/common_iteration.c \
	src/common_numbers.c \
	src/common_objects.c \
	src/common_packages.c \
	src/common_printer.c \
	src/common_reader.c \
	src/common_sequences.c \
	src/common_streams.c \
	src/common_strings.c \
	src/common_structures.c \
	src/common_symbols.c \
	src/common_system.c \
	src/common_types.c \
	src/common.c \
	src/condition.c \
	src/cons.c \
	src/constant.c \
	src/control.c \
	src/copy.c \
	src/core.c \
	src/degrade.c \
	src/develop.c \
	src/document.c \
	src/encode.c \
	src/environment.c \
	src/equal.c \
	src/eval_code.c \
	src/eval_declare.c \
	src/eval_main.c \
	src/eval_optparse.c \
	src/eval_parse.c \
	src/eval_scope.c \
	src/eval_stack.c \
	src/eval_table.c \
	src/eval.c \
	src/execute.c \
	src/extern_argv.c \
	src/extern_init.c \
	src/extern_object.c \
	src/extern_string.c \
	src/fasl.c \
	src/file_memory.c \
	src/file.c \
	src/files.c \
	src/fmtfloat.c \
	src/format.c \
	src/function.c \
	src/gc.c \
	src/hashtable.c \
	src/heap.c \
	src/info.c \
	src/integer.c \
	src/intern.c \
	src/lambda.c \
	src/local.c \
	src/main.c \
	src/math_exp.c \
	src/math_power.c \
	src/math_type.c \
	src/md5encode.c \
	src/memory.c \
	src/mop.c \
	src/mop_class.c \
	src/mop_generic.c \
	src/mop_reader.c \
	src/mop_protocols.c \
	src/number.c \
	src/number_gcd.c \
	src/number_random.c \
	src/object.c \
	src/package.c \
	src/pathname.c \
	src/pointer.c \
	src/print.c \
	src/prompt.c \
	src/quote.c \
	src/radix.c \
	src/random.c \
	src/random_float.c \
	src/random_state.c \
	src/ratio.c \
	src/rational.c \
	src/readlite.c \
	src/readtable.c \
	src/real_ceiling.c \
	src/real_common.c \
	src/real_decode.c \
	src/real_division.c \
	src/real_float.c \
	src/real_floor.c \
	src/real_round.c \
	src/real_truncate.c \
	src/real.c \
	src/rt.c \
	src/rt_load.c \
	src/sequence.c \
	src/setf.c \
	src/sort.c \
	src/stream_broadcast.c \
	src/stream_concat.c \
	src/stream_echo.c \
	src/stream_error.c \
	src/stream_file.c \
	src/stream_prompt.c \
	src/stream_string.c \
	src/stream_synonym.c \
	src/stream_twoway.c \
	src/stream.c \
	src/strtype.c \
	src/structure.c \
	src/sxhash.c \
	src/symbol.c \
	src/syscall.c \
	src/thread.c \
	src/token.c \
	src/type_coerce.c \
	src/type_constant.c \
	src/type_copy.c \
	src/type_deftype.c \
	src/type_name.c \
	src/type_number.c \
	src/type_object.c \
	src/type_optimize.c \
	src/type_parse.c \
	src/type_range.c \
	src/type_subtypep.c \
	src/type_symbol.c \
	src/type_table.c \
	src/type_typep.c \
	src/type_upgraded.c \
	src/type_value.c \
	src/type.c \
	src/unicode.c \
	src/user.c \
	src/variable.c

#npt_CFLAGS =  -DLISP_64BIT --DLISP_THREAD -DLISP_PROMPT_EDITLINE -DLISP_MODE_STANDALONE
#bsd debug
##LISP_C = -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -g -DLISP_DEGRADE -DLISP_DEBUG -DLISP_MODE_DEGRADE
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#bsd debug32
##LISP_C = -m32 -DLISP_32BIT
##LISP_C += -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -g -DLISP_DEGRADE -DLISP_DEBUG -DLISP_MODE_DEGRADE
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#bsd debug64
##LISP_C = -m64 -DLISP_64BIT
##LISP_C += -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -g -DLISP_DEGRADE -DLISP_DEBUG -DLISP_MODE_DEGRADE
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#bsd release
##LISP_C = -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -DLISP_MODE_STANDALONE -O3
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#bsd release32
##LISP_C = -m32 -DLISP_32BIT
##LISP_C += -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -DLISP_DEGRADE -DLISP_MODE_STANDALONE -O3
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#bsd release64
##LISP_C = -m64 -DLISP_64BIT
##LISP_C += -DLISP_FREEBSD -DLISP_THREAD -DLISP_PROMPT_EDITLINE
##LISP_C += -DLISP_DEGRADE -DLISP_MODE_STANDALONE -O3
##LISP_LIB = -lm -lpthread -ledit
##CFLAGS = -std=c99 -Wall -Isrc -Itest ${LISP_C}

#linux debug
##LISP_C = -DLISP_LINUX -DLISP_THREAD -DLISP_PROMPT_READLINE
##LISP_C += -g -DLISP_DEGRADE -DLISP_DEBUG -DLISP_MODE_DEGRADE
##LISP_LIB = -lm -lpthread -lreadline
##CFLAGS = -Wall -Isrc -Itest ${LISP_C}

npt_SOURCES = $(release_source)
